--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@quasar/extras": "^1.0.0",
     "bluebird": "^3.7.2",
     "core-js": "^3.6.5",
+    "cron-schedule": "^3.0.6",
     "pinia": "^2.0.14",
     "pouchorm": "^2.1.1",
     "quasar": "^2.0.0",
