--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bluebird": "^3.7.2",
     "core-js": "^3.6.5",
     "cron-schedule": "^3.0.6",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.14",
     "pouchorm": "^2.1.1",
     "quasar": "^2.0.0",
@@ -25,6 +26,7 @@
     "@babel/eslint-parser": "^7.13.14",
     "@quasar/app": "^3.0.0",
     "@types/bluebird": "^3.5.36",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
