Intégration spraypaint + mock login

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pinia": "^2.0.14",
     "pouchorm": "^2.1.1",
     "quasar": "^2.0.0",
+    "spraypaint": "^0.10.24",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
   },
